nist/network/cnp-nist-ac-3-3-limit-pod-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nist-ac-3-3-limit-pod-egress
spec:
  description: "This Policy will Restrict Pod to Pod Communication within the Namespace"
  endpointSelector:
    matchLabels:
      pod: testpod
  egress:
    - toEndpoints:
        - {}
