nist/network/cnp-nist-ac-4-7-egress-deny-all-outbound-commincation-except-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nist-ac-4-7-egress-deny-all-outbound-commincation-except-dns
  namespace: default                                                          #change namespace with your namespace value
spec:
  description: "NIST AC-4(7) Information Flow Enforcement | One-way Flow Mechanisms | allow only ingress"
  endpointSelector:
    matchLabels:
      app: demo-app                                                           #change label with your label values
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
