nist/network/cnp-nist-sc-7-11-ingress-deny-all-inbound-commincation.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nist-sc-7-11-ingress-deny-all-inbound-commincation
  namespace: default                                              #change namespace with your namespace value
spec:
  description: "NIST-SC-7(11), Information Flow Enforcement | One-way Flow Mechanisms | allow only egress"
  endpointSelector:
    matchLabels:
      app: demo-app                                              #change label with your label values
  ingress:
    - {}
