nist/network/cnp-nist-sc-7-9-allow-only-internal-connections.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nist-sc-7-9-allow-only-internal-connections
  namespace: default        #change default namespace to match your namespace
spec:
  description: "NIST-SC-7(9), Allow only internal connections. Block external connections."
  endpointSelector:
    matchLabels:
      app: mysql      #change app: mysql to match your label
  egressDeny:
  - toEntities:
    - "world"
  egress:
  - toEndpoints:
    - {}
  - toEndpoints: #to enable dns connection
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
    toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
